--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,13 @@ name: CI-CD
 on:
   push:
     branches:
-    - workflow
+    - master
     tags:
     - '[0-9]+.[0-9]+.[0-9]+'
     - '[0-9]+.[0-9]+.[0-9]+a[0-9]+'
   pull_request:
     branches:
-    - workflow
+    - master
 
 jobs:
   test:
